# FastAPI-session-booking

.github/workflows/: ci.yaml  terraform-vpc.yml
ci_cd/python/: Dockerfile
infrastructure/global/vpc/: main.tf  network.tf  outputs.tf  security_groups.tf  variables.tf
services/session_booking/: .flake8  pyproject.toml
